# bitcraft-preview

./: .gitignore  LICENSE  README.md  pyproject.toml
bitcraft_preview/: __init__.py  __main__.py  assets.py  config.py  logging_setup.py  update_checker.py  version.py
bitcraft_preview/native/: __init__.py  dpapi.py  local_user_manager.py  process_control.py  process_launcher.py  setup_service.py  state_manager.py  steam_locator.py
bitcraft_preview/ui/: main_shell.py  main_window.py  overlay_manager.py  tile.py
bitcraft_preview/ui/shell/: __init__.py  accounts.py  panels.py  styles.py  widgets.py  window.py
bitcraft_preview/win32/: activation.py  dwm_thumbnail.py  gamepad_detector.py  hotkey_monitor.py  title_parse.py  window_discovery.py
scripts/: sanity_check_thumbnail.py
tests/: test_accounts_logic.py  test_config_updates.py  test_dpapi.py  test_gamepad_detector.py  test_local_user_manager.py  test_native_process_control.py  test_native_setup_service.py  test_native_state_manager.py  test_overlay_manager_logic.py  test_process_launcher.py  test_steam_locator.py  test_tile_drag_lock.py  test_tile_inline_label.py
