[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bitcraft_preview"
version = "0.4.1"
description = "A Multibox tool for Bitcraft"
dependencies = [
    "PySide6",
    "psutil",
]

[project.scripts]
bitcraft_preview = "bitcraft_preview.__main__:main"
